# 02476-Group120

./: .coverage  .env_template  .gitignore  .pre-commit-config.yaml  HowToRunDocker.txt  README.md  _git_cheatSheet.md  _python_imports_guide.md  cloud_config.yaml  cloudbuild.yaml  data.dvc  dataset.dvc  dataset.tar.dvc  entrypoint.sh  main_test_conf.py  pyproject.toml  sweep.yaml  tasks.py  vertex_ai_train.yaml
.dvc/: config
.github/workflows/: codecheck.yaml  pre_commit.yaml  test.yaml
configs/: config.yml
configs/data/: gtrsb.yaml
configshydra/: config.yaml
configshydra/cloud/: bucket1.yaml
configshydra/data/: gcs.yaml  gtsrb.yaml
configshydra/model/: tinycnn.yaml
configshydra/training/: trainConf.yaml
data/: kaggleDownload.py
dockerfiles/: Dockerfile.train  api.dockerfile   train.dockerfile
docs/: mkdocs.yaml
group120/: pyproject.toml
notebooks/: First_CNN.ipynb  IDLCV_Exercise_1_3_CIFAR_Classification.ipynb
outputs/2026-01-14/11-45-16/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-18/14-38-50/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-18/14-42-05/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-18/14-43-44/.hydra/: hydra.yaml
outputs/2026-01-18/14-43-52/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-18/14-45-37/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-18/14-45-49/.hydra/: config.yaml  hydra.yaml
reports/: README.md  report.html
src/mlops/: api.py  benchmarking.py  bentoml_service.py  data.py  evaluate.py  export_onnx.py  hello.py  inference.py  model.py  preprocess.py  pruning.py  quantize.py  train.py  utils.py  visualize.py
src/mlops/data/: _old_make_dataset_3.py  dataset.py  make_dataset.py
src/mlops/outputs/2026-01-18/23-00-53/.hydra/: hydra.yaml
tests/: test_api.py  test_data.py  test_model.py
tests/performancetests/: locustfile.py
wandb/: latest-run
wandb/run-20260120_142225-2dltjpkg/: run-2dltjpkg.wandb
wandb/run-20260120_142225-2dltjpkg/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
(+1 files in other folders)
